# cim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  spacify.sh
meta/: ast_mem_layout.txt  todo.txt
src/: .gitignore  ast.h  ast_printer.c  ast_printer.h  build.sh  cim  compiler.c  compiler.h  dbuffer.c  dbuffer.h  error.h  hms.c  hms.h  keywords.c  keywords.h  main.c  operations.h  parser.c  parser.h  sbuffer.c  sbuffer.h  scopes.c  scopes.h  settings.h  token.h  token_strings.c  token_strings.h  tokenizer.c  tokenizer.h  tokenizer_t.h  tokens.c  tokens.h  type_types.h  types.h
src/cim/: dbuffer.c  dbuffer.h  main.c  parser.c  parser.h  types.h
test/: dummy_src.cim
